[gd_scene load_steps=4 format=3 uid="uid://cqmaslqoopveg"]

[ext_resource type="Script" path="res://CommandPattern/game_manager.gd" id="1_iawo4"]
[ext_resource type="PackedScene" uid="uid://crq6kaslm0vx2" path="res://tscn/character.tscn" id="2_e8tdl"]
[ext_resource type="Script" path="res://CommandPattern/SkillMenu.gd" id="3_4ycv8"]

[node name="TestField" type="Node2D"]
script = ExtResource("1_iawo4")

[node name="Character" parent="." instance=ExtResource("2_e8tdl")]
position = Vector2(518, 269)

[node name="MenuButton" type="MenuButton" parent="."]
offset_left = 32.0
offset_top = 452.0
offset_right = 115.0
offset_bottom = 510.0
text = "Skills"
switch_on_hover = true
item_count = 2
popup/item_0/text = "Attack"
popup/item_0/id = 0
popup/item_1/text = "Heal"
popup/item_1/id = 1
script = ExtResource("3_4ycv8")

[node name="Button" type="Button" parent="."]
offset_left = 18.0
offset_top = 28.0
offset_right = 131.0
offset_bottom = 94.0
text = "UNDO"

[node name="Button2" type="Button" parent="."]
offset_left = 142.0
offset_top = 28.0
offset_right = 255.0
offset_bottom = 94.0
text = "REDO"

[connection signal="SendCommand" from="Character" to="." method="_on_character_send_command"]
[connection signal="SendCommand" from="MenuButton" to="." method="_on_menu_button_send_command"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
